<resources>
    <string name="app_name">Ticked</string>

    <string name="Skip_btn">Skip</string>
    <string name="GetStart_btn">Get Start</string>
    <string name="onboard2text1">Increase Work Effectiveness</string>

    <string name="onboard3text">User Friendly Interface</string>

    <string name="logintext">Tricked</string>
    <string name="logintext2">Management  App</string>
    <string name="logintext3">Login to your account</string>
    <string name="loginfogtpw">Forgot password?</string>
    <string name="logintext5">"Don’t have an account?"</string>
    <string name="loginSinguptext">"Sign Up "</string>
    <string name="singuptext1">Create your account</string>
    <string name="logintxt">Login</string>
    <string name="txtlog">Do you have an account?</string>
    <string name="hometext1">Saturday, Feb 20 2024</string>
    <string name="hometxt2">Welcome Imansi</string>
    <string name="hometxt3">Have a nice day !</string>
    <string name="hometxt4">My Priority Task</string>
    <string name="hometxt5">Daily Tasks</string>
    <string name="lbl_design_revision">Design revision</string>
    <string name="prioritytxt1">User Experience (UX) is the essence of digital interaction, covering everything from screens and touchpoints to sounds and lights. </string>
    <string name="prioritytxt2">Description</string>
    <string name="prioritytxt3">To do List</string>
    <string name="dailytask1">Description</string>
    <string name="dailytask2">Fuel your day with morning exercise—running, swimming, jogging, badminton, futsal—for a healthier, stronger you. Elevate your well-being and embrace an active lifestyle.</string>
    <string name="num1">14\n</string>
    <string name="num2">48\n</string>
    <string name="Edittask">Edit Task</string>
    <string name="Title">Title</string>
    <string name="Category">Category</string>
    <string name="Prioritytask">Priority Task</string>
    <string name="Description">Description</string>
    <string name="uipara">User Experience (UX) is the essence of digital interaction, covering everything from screens and touchpoints to sounds and lights. </string>
    <string name="rexttd2">Make a wireframe</string>
    <string name="rexttd3">Make a component desing</string>
    <string name="rexttd4">Client meeting</string>
    <string name="rexttd6">Make desing</string>
    <string name="rexttd7">Revition desing</string>
    <string name="rexttd8">Fix desing</string>
    <string name="UI">UI Design</string>
    <string name="pogress_txt">Progress</string>
    <string name="Programming">Programming</string>
    <string name="EditaPicture">Edit a \nPicture</string>
    <string name="WritingBook">"Writing \nBook   "</string>
    <string name="Daily_Task">Daily Task</string>
    <string name="date1">Feb, 2024</string>
    <string name="AddTask">Add Task</string>
    <string name="UIDesign">UI Design</string>
    <string name="PriorityTask">Priority Task</string>
    <string name="DailyTask">Daily Task</string>
    <string name="UIDesignpara">User Experience (UX) is the essence of digital interaction, covering everything from screens and touchpoints to sounds and lights. .</string>
    <string name="datui">Feb, 10 - Feb, 22</string>
    <string name="programminpara">\"Programming is a craft where creativity meets functionality.  </string>
    <string name="datepro">Feb, 15 - Mar, 22</string>
    <string name="editpic">Edit a Picture</string>
    <string name="picpara">"Image editing encompasses the processes of altering images, whether they are digital photographs, traditional photo-chemical photographs, or illustrations.  "</string>
    <string name="date3">Feb, 21 - Mar, 27</string>
    <string name="write">"Writing Book  "</string>
    <string name="bookpara">Writing is a medium of human communication that involves the representation of a language through a system of physically inscribed, mechanically "</string>
    <string name="date4">Feb, 21 - Mar, 30</string>
    <string name="daily1">Work Out</string>
    <string name="daily2">Daily Meeting</string>
    <string name="daily3">Reading Book</string>
    <string name="daily4">Learn Coding</string>
    <string name="daily5">Sleep soon</string>
    <string name="addtask">Add Task</string>
    <string name="PriorityPask">Priority Task</string>
    <string name="text9">Work Out</string>
    <string name="workpara">Elevate your well-being and embrace an active lifestyle.</string>
    <string name="WorkOut">Work Out</string>
    <string name="dailypara">  Elevate your well-being and embrace an active lifestyle.</string>
    <string name="profile">Profile</string>
    <string name="name">Imansi Kulathunga</string>
    <string name="design">UI UX Designer</string>
    <string name="location">Colombo, Sri Lanka</string>
    <string name="task">2653 Task Completed</string>
    <string name="MyProfile">My Profile</string>
    <string name="Statistic">Statistic</string>
    <string name="Location">Location</string>
    <string name="Settings">Settings</string>
    <string name="Logout">Logout</string>
    <string name="MyProfilenm">My Profile</string>
    <string name="Name">Name</string>
    <string name="name1">Imansi Kulathunga</string>
    <string name="Profession">Profession</string>
    <string name="job">UI UX Designer</string>
    <string name="dob">Date of Birth</string>
    <string name="date21">Jan-30-2003</string>
    <string name="Email">Email</string>
    <string name="email">kavindikulathunga203@gmail.com</string>
    <string name="Statisti">Statistic</string>
    <string name="date33">2023</string>
    <string name="TotalTasks">Total Tasks</string>
    <string name="num22">846</string>
    <string name="CompletedTasks">Completed Tasks</string>
    <string name="num23">682</string>
    <string name="january">January</string>
    <string name="Loca">Location</string>
    <string name="Setting">Settings</string>
    <string name="Security">Security</string>
    <string name="Help">Help</string>
    <string name="UpdateSystem">Update System</string>
    <string name="About">About</string>
    <string name="invitefd">Invite a friend</string>
    <string name="Security1">Security</string>
    <string name="next">Next</string>
    <string name="Logou">Log Out</string>
</resources>